# units-si-exp

./: .clang-format  CMakeLists.txt  README.md
cmake/: fetch_content.cmake
exec/src/: main.cpp
lib/dummy/src/: dummy.cpp
lib/units/: CMakeLists.txt
lib/units/include/units/: Dimension.hpp  Length.hpp  MagneticFluxDensity.hpp  Quantity.hpp  Time.hpp  Voltage.hpp  fwd.hpp
lib/units/include/units/base/: AmountOfSubstance.hpp  Current.hpp  Dimensionless.hpp  Length.hpp  Luminescence.hpp  Mass.hpp  Temperature.hpp  Time.hpp
lib/units/include/units/compound/: MagneticFluxDensity.hpp  Voltage.hpp
test/: CMakeLists.txt
test/src/: dummy_test.cpp  length_test.cpp  physics_test.cpp  unit_mismatch_test.cpp
